Text added to navbar buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,16 +14,15 @@
 </head>
 <body class="bg-dark text-light">
     <nav class="navbar navbar-expand-md bg-secondary fixed-top">
-        <a class="navbar-brand" href="{{url_for('home')}}">
-            <img src="static/Guadalcanal_Cup.png" width="50" height="50" alt="Guadalcanal Cup">
+        <a class="navbar-brand text-dark" href="{{url_for('home')}}">
+            <img src="static/Guadalcanal_Cup.png" width="35" height="35" alt="Guadalcanal Cup">Home
         </a>
-        <a class="navbar-brand" href="{{url_for('welcome')}}">
-            <img src="static/LL_Logo.png" width="50" height="50" alt="Lightning Labs">
+        <a class="navbar-brand text-dark" href="{{url_for('welcome')}}">
+            <img src="static/LL_Logo.png" width="35" height="35" alt="Lightning Labs">Careers
         </a>
-        <a class="navbar-brand" href="#">
-            <img src="static/25ID_Logo.png" width="50" height="50" alt="25th ID">
+        <a class="navbar-brand text-dark" href="#">
+            <img src="static/25ID_Logo.png" width="35" height="35" alt="25th ID">Units
         </a>
-
     </nav>
     <br>
     <br>
