Squashed commit of the following:
commit 1fd0881a8574f584e3785608f5a6b47136f62f9f
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Thu Aug 31 15:02:02 2023 -1000

    zip_folder() created in proj_util.py

    This function creates a .zip of the selected folder in the directory where the folder is found.

commit 7a23d8a08fe9ac105d7e34262f15892275d64176
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Thu Aug 31 15:01:02 2023 -1000

    Create backup_table()

    A function in models.py that creates a backup for the selected table. Receives the class as parameter.

commit 9bbe549f3c51b13569d83088d58da1d6e8887b8c
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Thu Aug 31 15:00:19 2023 -1000

    Update write_to_csv()

    Now receives an additional parameter, determining where the file should be written in

commit cbf8d618f70ac6874c74c2ec1a81ea334e72cb3c
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Thu Aug 31 14:58:38 2023 -1000

    Labels added for buttons

    UI/UX issues

commit f256919cb098b96726abb7c118b1cd74d21bf7db
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Thu Aug 31 14:57:41 2023 -1000

    Update random_user_code()

    Now receives an integer variable for how long the code should be

commit f06b8f7d6bb404b07948f552d6bd737419753b55
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Wed Aug 30 16:28:39 2023 -1000

    Backup functionality live

    Currently only backs up the scoreboard, not the database

commit 575d04d08e95b0311f4373ddab30200182088d7e
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Wed Aug 30 15:41:00 2023 -1000

    Created write_to_csv function

commit 4b326274f110796b4c6c7af4a1552bc778734b63
Author: Soomin Song <100112940+nimoooos@users.noreply.github.com>
Date:   Wed Aug 30 15:40:24 2023 -1000

    Update .gitignore

    env.py added to .gitignore

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,14 +12,29 @@
     <form action="{{ url_for('admin') }}" method="POST">
         <input type="hidden" name="request_code" value="UPDATE_SCOREBOARD">
         <input class="btn btn-secondary" type="submit" value="Force Scoreboard Update">
-        <label>Please only click this button once!</label>
+        <label>Update the scoreboard display. This can take a while, please be patient!</label>
     </form>
+    <br>
 
     <form action="{{ url_for('admin') }}" method="POST">
         <input type="hidden" name="request_code" value="CREATE_NEW_USER">
         <input class="btn btn-secondary" type="submit" value="Create New Login Code">
+        <label>Generate a new login code for a user.</label>
     </form>
+    <br>
 
+    <form action="{{ url_for('admin') }}" method="POST">
+        <input type="hidden" name="request_code" value="BACKUP_SCOREBOARD">
+        <input class="btn btn-secondary" type="submit" value="Create Scoreboard Backup">
+        <label>Create a .csv backup of the scoreboard.</label>
+    </form>
+    <br>
+
+    <form action="{{ url_for('admin') }}" method="POST">
+        <input type="hidden" name="request_code" value="BACKUP_DATABASE">
+        <input class="btn btn-secondary" type="submit" value="Create Database Backup">
+        <Label>Create a backup of the entire database.</Label>
+    </form>
 
     <hr>
 
