--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
             </form>
             <hr>
             <form action="{{url_for('login')}}">
-                <input type="submit" class="btn btn-info" value="Update Scores">
+                <input type="submit" class="btn btn-info" value="Log In">
             </form>
         </div>
 
