Major Changes 18SEP23
Type hints added to functions
Added comments and docstrings for maintainability
Redirects to info page rather than scoreboard
Created seed file for 2023

--- a/templates/Welcome.html
+++ b/templates/Welcome.html
@@ -17,7 +17,7 @@
     </div>
     <script>
         setTimeout(function() {
-        window.location.href = '{{url_for('home')}}';
+        window.location.href = '{{url_for('info')}}';
         },500);
     </script>
 </body>
