--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             <img src="static/LL_Logo.png" width="35" height="35" alt="Lightning Labs">Lightning Labs
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('home')}}">
-            <img src="static/25ID_Logo.png" width="35" height="35" alt="25th ID">Units
+            <img src="static/25ID_Logo.png" width="35" height="35" alt="25th ID">Scoreboard
         </a>
     </nav>
     <br>
@@ -42,11 +42,12 @@
     </div>
     {% block content %}
     {% endblock %}
-    <div class="container-md bg-white text-dark">
+    <div class="container-md bg-secondary text-dark">
         <hr>
         <img src="static/LL_Logo.png" width="35" height="35" alt="Lightning Labs">
         <label>Created by Lightning Labs</label>
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a>
+        <hr>
     </div>
 </body>
 </html>
