--- a/templates/info.html
+++ b/templates/info.html
@@ -6,5 +6,6 @@
 {% block content %}
     <div class="container-md">
         <label>Info Page Under Construction</label>
+<!--TODO: Add the rest of slides-->
     </div>
 {% endblock %}
