--- a/templates/viewuser.html
+++ b/templates/viewuser.html
@@ -11,11 +11,19 @@
         {{view_user.code}}
         <ul class="list-group">
             {% for eventKey in event_dict %}
-            <li class="list-group-item">
+            <li class="list-group-item text-dark">
                 {% if event_dict[eventKey]["permission"] %}
-                <button class="btn btn-success">{{event_dict[eventKey]["event_name"]}}</button>
+                <form action="{{ url_for('viewuser') }}" method="POST">
+                    <input type="hidden" name="request_code" value="REMOVE_{{eventKey}}">
+                    <input class="btn btn-success" type="submit" value="{{event_dict[eventKey]['event_name']}}">
+                    <Label>Remove user access: {{event_dict[eventKey]['event_name']}}</Label>
+                </form>
                 {% else %}
-                <button class="btn btn-danger">{{event_dict[eventKey]["event_name"]}}</button>
+                <form action="{{ url_for('viewuser') }}" method="POST">
+                    <input type="hidden" name="request_code" value="ADD_{{eventKey}}">
+                    <input class="btn btn-danger" type="submit" value="{{event_dict[eventKey]['event_name']}}">
+                    <Label>Add user access: {{event_dict[eventKey]['event_name']}}</Label>
+                </form>
                 {% endif %}
             </li>
             {% endfor %}
