--- a/templates/info.html
+++ b/templates/info.html
@@ -7,5 +7,10 @@
     <div class="container-md">
         <label>Info Page Under Construction</label>
 <!--TODO: Add the rest of slides-->
+        <hr>
+        <form action="{{url_for('login')}}">
+            <input type="submit" class="btn btn-info" value="Log In">
+        </form>
     </div>
+
 {% endblock %}
