--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,6 +7,7 @@
 {% block content %}
 <div class="container-md">
     <h6>Logged in as {{user_code}}</h6>
+    <form action="{{ url_for('account') }}"><input type="submit" class="btn btn-secondary" value="Back"></form>
     <hr>
 
     <form action="{{ url_for('admin') }}" method="POST">
