--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,6 +7,7 @@
     <div class="container-md">
         <h4>Upload Scores for {{ event.name }}</h4>
         <h6>Logged in as {{user_code}}</h6>
+        <form action=" {{url_for('account') }}"><input type="submit" class="btn btn-secondary" value="Back"></form>
     </div>
     <hr>
     <div class="container-md">
