--- a/templates/viewuser.html
+++ b/templates/viewuser.html
@@ -5,10 +5,9 @@
 {% endblock %}
 {% block content %}
     <div class="container-md">
-        <label>Under Construction: View User</label>
-
         <br>
-        {{view_user.code}}
+        <form action="{{ url_for('admin') }}"><input type="submit" class="btn btn-secondary" value="Back"></form>
+        <label>Permissions for: {{view_user.code}}</label>
         <ul class="list-group">
             {% for eventKey in event_dict %}
             <li class="list-group-item text-dark">
