Removed Public Scoreboard

--- a/templates/Welcome.html
+++ b/templates/Welcome.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="main-container container-md vh-100">
-            <a class="d-flex vh-100 justify-content-center" href="{{url_for('home')}}">
+            <a class="d-flex vh-100 justify-content-center" href="{{url_for('info')}}">
                 <img src="static/LL_Logo.png" class="img-fluid align-self-center" alt="Lightning Labs">
             </a>
     </div>
