--- a/templates/base.html
+++ b/templates/base.html
@@ -15,16 +15,13 @@
 <body class="bg-dark text-light">
     <nav class="navbar navbar-expand-md bg-secondary fixed-top">
         <a class="navbar-brand text-dark" href="{{url_for('info')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/Guadalcanal_Cup.png" width="23" height="23" alt="Guadalcanal Cup Logo">TLW</button>
+            <button class="btn btn-dark btn-sm"><img src="static/Guadalcanal_Cup.png" width="23" height="23" alt="Guadalcanal Cup Logo">TLW Info</button>
         </a>
-        <a class="navbar-brand text-dark" href="{{url_for('home')}}">
+        <a class="navbar-brand text-dark" href="{{url_for('login')}}">
             <button class="btn btn-dark btn-sm"><img src="static/25ID_Logo.png" width="23" height="23" alt="25th ID Logo">Scores</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('welcome')}}">
             <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" width="23" height="23" alt="Lightning Labs Logo">Labs</button>
-        </a>
-        <a class="navbar-brand text-dark" href="{{url_for('login')}}">
-            <button class="btn btn-dark btn-sm">Log In</button>
         </a>
     </nav>
     <br>
