--- a/templates/info.html
+++ b/templates/info.html
@@ -4,18 +4,11 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-<!--TODO: pull from application.info() and loop through instead of manually displaying each image-->
     <div class="container-md text-center">
         <label>Info Page Under Construction</label>
-        <img src="static/TLW PPT Slides/1.png" class="img-fluid"><hr>
-        <img src="static/TLW PPT Slides/2.png" class="img-fluid"><hr>
-        <img src="static/TLW PPT Slides/3.png" class="img-fluid"><hr>
-        <img src="static/TLW PPT Slides/4.png" class="img-fluid"><hr>
-<!--TODO: Add the rest of slides-->
-        <hr>
-        <form action="{{url_for('login')}}">
-            <input type="submit" class="btn btn-info" value="Log In">
-        </form>
+        {% for file in files %}
+        <img src="{{file}}" class="img-fluid"><br><br>
+        {% endfor %}
     </div>
 
 {% endblock %}
