--- a/templates/scores.html
+++ b/templates/scores.html
@@ -37,7 +37,7 @@
                                     <th class="align-middle"></th>
                                 {% else %}
                                     <th class="align-middle">
-                                        <form action="{{ url_for('home') }}" method="POST">
+                                        <form action="{{ url_for('scores') }}" method="POST">
                                             <input type="hidden" name="request_code" value="TEAM_{{item}}">
                                             <input class="btn btn-secondary" type="submit" value="{{item}}">
                                         </form>
@@ -51,7 +51,7 @@
 
                             {% if item==row[0] %}
                             <td>
-                            <form action="{{ url_for('home') }}" method="POST">
+                            <form action="{{ url_for('scores') }}" method="POST">
                                 <input type="hidden" name="request_code" value="EVENT_{{item}}">
                                 <input class="btn btn-secondary" type="submit" value="{{item}}">
                             </form>
@@ -85,14 +85,6 @@
             </div>
 
             {% endif %}
-
-            <form action="{{url_for('home')}}">
-                <input type="submit" class="btn btn-primary" value="Refresh Page">
-            </form>
-            <hr>
-            <form action="{{url_for('login')}}">
-                <input type="submit" class="btn btn-info" value="Log In">
-            </form>
         </div>
 
     </div>
