removed reference to home
home() was renamed to scores() and requires admin access now

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -6,8 +6,8 @@
 {% block content %}
 
 <div class="container-md">
-    <form action="{{url_for('home')}}">
-        <input type="submit" class="btn btn-primary" value="Return to main page">
+    <form action="{{url_for('account')}}">
+        <input type="submit" class="btn btn-primary" value="Return to account view">
     </form>
 </div>
 
