--- a/templates/scores.html
+++ b/templates/scores.html
@@ -5,14 +5,13 @@
 {% endblock %}
 {% block content %}
     <div class="container-fluid">
-
+    <form action="{{ url_for('admin') }}">
+        <input class="btn btn-primary" type="submit" value="Back">
+    </form>
         {% if show_leaderboard %}
-        <div class="container-md d-flex justify-content-center">
-            <label class="display-4 text-center">Guadalcanal Cup 2023</label>
-        </div>
         <div class="container-md text-center">
             <hr>
-            <h2>Current Leaderboard</h2>
+            <h2>Leaderboard - Total Scores</h2>
             <ul class="container-fluid list-group text-center">
                 {% for team in teams %}
                 <li class="list-group-item bg-secondary text-light">{{ team["name"] }}  -  {{ team["score"] }} Points</li>
