--- a/templates/viewuser.html
+++ b/templates/viewuser.html
@@ -8,6 +8,11 @@
         <br>
         <form action="{{ url_for('admin') }}"><input type="submit" class="btn btn-secondary" value="Back"></form>
         <label>Permissions for: {{view_user.code}}</label>
+        <form action="{{ url_for('viewuser') }}" method="POST">
+            <input type="hidden" name="request_code" value="DROPUSER_{{view_user.id}}">
+            <input class="btn btn-danger" type="submit" value="Delete User Account">
+        </form>
+        <hr>
         <ul class="list-group">
             {% for eventKey in event_dict %}
             <li class="list-group-item text-dark">
