--- a/templates/submit.html
+++ b/templates/submit.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div class="container-md">
-    <form action="{{url_for('account')}}">
+    <form action="{{url_for('account')}}" method="POST">
         <input type="submit" class="btn btn-primary" value="Return to account view">
     </form>
 </div>
