--- a/templates/scores.html
+++ b/templates/scores.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="container-fluid">
-    <form action="{{ url_for('admin') }}">
+    <form action="{{ url_for('admin') }}" method="POST">
         <input class="btn btn-primary" type="submit" value="Back">
     </form>
         {% if show_leaderboard %}
