--- a/templates/viewuser.html
+++ b/templates/viewuser.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container-md">
         <br>
-        <form action="{{ url_for('admin') }}" method="POST"><input type="submit" class="btn btn-secondary" value="Back"></form>
+        <form action="{{ url_for('admin') }}"><input type="submit" class="btn btn-secondary" value="Back"></form>
         <label>Permissions for: {{view_user.code}}</label>
         <form action="{{ url_for('viewuser') }}" method="POST">
             <input type="hidden" name="request_code" value="DROPUSER_{{view_user.id}}">
