--- a/templates/scores.html
+++ b/templates/scores.html
@@ -4,7 +4,7 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-md">
     <form action="{{ url_for('admin') }}">
         <input class="btn btn-primary" type="submit" value="Back">
     </form>
