--- a/templates/info.html
+++ b/templates/info.html
@@ -4,10 +4,21 @@
   {{ super() }}
 {% endblock %}
 {% block content %}
+
     <div class="container-md text-center">
-        {% for file in files %}
-        <img src="{{file}}" class="img-fluid"><br><br>
-        {% endfor %}
+        <h1>2023 Tropic Lightning Week</h1>
     </div>
+
+    {% for file in files %}
+    <div class="container-md text-center border border-secondary rounded my-3 py-3">
+        <h1>Title</h1>
+        <img src="{{file}}" class="img-fluid"><br><br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
+    </div>
+    {% endfor %}
 
 {% endblock %}
