Make scores() accessible

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
         <a class="navbar-brand text-dark" href="{{url_for('login')}}">
             <button class="btn btn-dark btn-sm"><img src="static/25ID_Logo.png" width="23" height="23" alt="25th ID Logo">Login</button>
         </a>
-        <a class="navbar-brand text-dark" href="{{url_for('welcome')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" width="23" height="23" alt="Lightning Labs Logo">Labs</button>
+        <a class="navbar-brand text-dark" href="{{url_for('scores')}}">
+            <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" width="23" height="23" alt="Lightning Labs Logo">Scores</button>
         </a>
     </nav>
     <br>
