--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,16 @@
 <body class="bg-dark text-light">
     <nav class="navbar navbar-expand-md bg-secondary fixed-top">
         <a class="navbar-brand text-dark" href="{{url_for('info')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/Guadalcanal_Cup.png" width="23" height="23" alt="Guadalcanal Cup Logo">TLW Info</button>
+            <button class="btn btn-dark btn-sm">TLW Info</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('login')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/25ID_Logo.png" width="23" height="23" alt="25th ID Logo">Login</button>
+            <button class="btn btn-dark btn-sm"><img src="static/25ID_Logo.png" height="20">Login</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('scores')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" width="23" height="23" alt="Lightning Labs Logo">Scores</button>
+            <button class="btn btn-dark btn-sm"><img src="static/Guadalcanal_Cup.png" height="20">Scores</button>
+        </a>
+        <a class="navbar-brand text-dark" href="{{url_for('labs')}}">
+            <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" height="20">Labs</button>
         </a>
     </nav>
     <br>
