--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Guadalcanal Cup 2023{% endblock %}
+{% block title %}Error{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
