--- a/templates/labs.html
+++ b/templates/labs.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Guadalcanal Cup 2023{% endblock %}
+{% block title %}Tropic Lightning Week 2023{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
