--- a/templates/base.html
+++ b/templates/base.html
@@ -12,19 +12,19 @@
     <title>{% block title %}Title{% endblock %}</title>
     {% endblock %}
 </head>
-<body class="bg-dark text-light">
+<body class="bg-light text-black">
     <nav class="navbar navbar-expand-md bg-secondary fixed-top">
         <a class="navbar-brand text-dark" href="{{url_for('info')}}">
-            <button class="btn btn-dark btn-sm">TLW Info</button>
-        </a>
-        <a class="navbar-brand text-dark" href="{{url_for('login')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/25ID_Logo.png" height="20">Login</button>
+            <button class="btn btn-dark btn-sm"><img src="static/25ID_Logo.png" height="18">Home</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('scores')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/Guadalcanal_Cup.png" height="20">Scores</button>
+            <button class="btn btn-dark btn-sm"><img src="static/Guadalcanal_Cup.png" height="18">Scores</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('labs')}}">
-            <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" height="20">Labs</button>
+            <button class="btn btn-dark btn-sm"><img src="static/LL_Logo.png" height="18">Labs</button>
+        </a>
+        <a class="navbar-brand text-dark" href="{{url_for('login')}}">
+            <button class="btn btn-dark btn-sm">Login</button>
         </a>
     </nav>
     <br>
@@ -45,7 +45,8 @@
     </div>
     {% block content %}
     {% endblock %}
-    <div class="container-md bg-secondary text-dark">
+    <hr>
+    <div class="container-md bg-light text-dark">
         <hr>
         <img src="static/LL_Logo.png" width="35" height="35" alt="Lightning Labs">
         <label>Created by Lightning Labs</label>
