--- a/templates/labs.html
+++ b/templates/labs.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container-md">
         <h1>Lightning Labs</h1>
-        <div class="container-sm border border-light w-50">
+        <div class="container-sm border border-dark w-50">
             <p><q>...it is the Soldiers in the field - those who have to fight - who should play a major role in determining what equipment they need to have and how they will operate.</q></p>
             <p class="text-right">-Jon T. Hoffman, A History of Innovation</p>
         </div>
