--- a/templates/info2.html
+++ b/templates/info2.html
@@ -5,7 +5,11 @@
 {% endblock %}
 {% block content %}
 
-<div class="container-flex" style="background-image: url(/static/display/banner2.png); background-size: cover; background-repeat: no-repeat;">
+<div class="container-flex">
+    <img src="/static/display/tlw_banner_1.png" width="100%" class="img-responsive">
+</div>
+<hr>
+<div class="container-flex">
         <div class="container-md text-center">
             <h1>Tropic Lightning Week 2023</h1>
             <h4>Honoring Our Legacy. Relentless Pursuit of Excellence.</h4>
@@ -28,8 +32,10 @@
         </div>
 </div>
 
+<hr>
+
 <div class="container-flex">
-    <img src="static/display/placeholder_banner.png" width="100%" class="img-responsive">
+    <img src="static/display/tlw_banner_2.png" width="100%" class="img-responsive">
 </div>
 <hr>
 
@@ -154,9 +160,15 @@
         </div>
     </div>
 </div>
-
 <hr>
 <div class="container-md text-center">
-    <h1>Join us on November 28</h1>
+    <h2>Event Map</h2>
+    <img src="static/display/tlw_map.jpg" width="800px">
+</div>
+
+<hr>
+<div class="container-flex text-center bg-dark text-light" style="height: 800px;">
+    <br><br><br><br>
+    <h1><b>Tropic Lightning. Strike Hard.</b></h1>
 </div>
 {% endblock %}
