--- a/templates/labs.html
+++ b/templates/labs.html
@@ -19,7 +19,7 @@
             position. Soldiers possess the tactical knowledge to identify opportunities to improve their mission sets,
             and they should be encouraged and provided the resources to do so.</p>
         <p>Lightning Labs is looking for talents! Please reach out if you believe you will be a good fit for Lightning Labs.
-        <img src="static/LL_logo.png" width="25"></p>
+        <img src="static/LL_Logo.png" width="25"></p>
     </div>
 
 
